--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: setup
+      run: sudo apt install libsdl2-dev
     - uses: actions/checkout@v2
     - name: make_def
       run: make
