--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   default:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: make
@@ -19,7 +18,6 @@ jobs:
 
   elks:
     runs-on: ubuntu-latest
-
     steps:
     - name: setup-1
       run: sudo apt-get update
@@ -33,10 +31,18 @@ jobs:
 
   advtech:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: config
       run: cp config-advtech.mk config.mk
+    - name: make
+      run: make
+
+  or556:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: config
+      run: cp config-or556.mk config.mk
     - name: make
       run: make
